--- a/package.json
+++ b/package.json
@@ -7,7 +7,7 @@
     "start": "ts-node src/index.ts",
     "dev": "nodemon src/index.ts",
     "prod": "node dist/index.js",
-    "build": "tsc ."
+    "build": "tsc"
   },
   "keywords": [],
   "author": "Toastify (https://toastify.tk/)",
